--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,3 +1,5 @@
+<a href="/account/petitions/">View your support requests</a>
+
 <h2 class="text-2xl font-bold mb-4">Account Settings</h2>
 <form method="POST" action="/account" class="space-y-4 max-w-md">
   <div>
