Add ImageServer support
Windows Only (for now) ImageServer support.
  "costumeRendering": {
    "outputPath": "C:\\Ouroboros-v2i210\\CityVault\\renders",
    "renderOutputPath": "C:\\Ouroboros-v2i210\\CityVault\\public\\images\\portrait",
    "enabled": true,
    "autoStartImageServer": true
  }

set enabled: true
and "autoStartImageServer": true
to automatically download (~5gb) the ImageServer and start rendering costumes.

--- a/views/admin/config_editor.ejs
+++ b/views/admin/config_editor.ejs
@@ -248,7 +248,21 @@
         </div>
       <% }); %>
     </div>
-
+    
+    <h2 class="text-xl font-semibold mb-2">Costume Rendering</h2>
+    <div class="grid grid-cols-2 gap-4 mb-4">
+      <% Object.keys(config.costumeRendering).forEach(function(key) { %>
+        <div>
+          <label class="block text-sm font-medium"><%= key %></label>
+          <% if (typeof config.costumeRendering[key] === 'boolean') { %>
+            <input type="hidden" name="config[costumeRendering][<%= key %>]" value="false" />
+            <input type="checkbox" name="config[costumeRendering][<%= key %>]" value="true" <%= config.costumeRendering[key] ? 'checked' : '' %> />
+          <% } else { %>
+            <input type="text" name="config[costumeRendering][<%= key %>]" value="<%= config.costumeRendering[key] %>" class="input" />
+          <% } %>
+        </div>
+      <% }); %>
+    </div>
     <button type="submit" class="btn btn-green">Save Config</button>
   </form>
 </div>
