--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,13 +9,16 @@
   <link rel="stylesheet" href="/css/default.css">
   <link rel="stylesheet" href="/css/custom.css">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<% if (config.useAutoEncrypt) { %>
   <script>
-  (function () {
-    if (location.protocol === 'http:') {
-      location.href = 'https://' + location.host + location.pathname + location.search + location.hash;
-    }
-  })();
-</script>
+    (function () {
+      if (location.protocol === 'http:') {
+        location.href = 'https://' + location.host + location.pathname + location.search + location.hash;
+      }
+    })();
+  </script>
+<% } %>
+
 
 </head>
 <body class="flex h-screen">
